--- a/minecraft-chets.css
+++ b/minecraft-chets.css
@@ -4,3 +4,40 @@ body{
     outline: 8px ridge rgba(219, 96, 20, 0.742);
   border-radius: 2rem;   
   }
+  html{
+    p {
+        animation-duration: 3s;
+        animation-name: slidein;
+       }
+      
+      @keyframes slidein {
+        from {
+          margin-left: 100%;
+          width: 300%;
+        }
+      
+        75% {
+          font-size: 300%;
+          margin-left: 25%;
+          width: 150%;
+        }
+      
+        to {
+          margin-left: 0%;
+          width: 100%;
+        }
+      }
+      
+}
+
+html{
+    .auto-spaced-linear-gradient {
+        background: linear-gradient(red, yellow, blue, orange);
+      }
+      
+}
+head{
+  label {
+    font-family: "Fira Sans", sans-serif;
+}
+}
