--- a/minecraft-chets.css
+++ b/minecraft-chets.css
@@ -41,3 +41,25 @@ head{
     font-family: "Fira Sans", sans-serif;
 }
 }
+body{
+    .shape {
+      padding: 20px;
+      margin: 20px;
+      border: 10px solid black;
+      border-radius: 50%;
+      float: left;
+      shape-outside: margin-box;
+    
+    <div class="box">
+    <div class="shape"></div>
+      <p>One November night in the year 1782, so the story runs,
+      two brothers sat over their winter fire in the little French town of Annonay,
+      watching the grey smoke wreaths from the hearth curl up the wide chimney.
+      Their names were Stephen and Joseph Montgolfier, they were papermakers by trade,
+      and were noted as possessing thoughtful minds and a 
+      Deep interest in all scientific knowledge and new discovery.</p>
+  </div>
+    }  
+  }
+  
+  
