--- a/my grid/grid.css
+++ b/my grid/grid.css
@@ -2,13 +2,18 @@ body{
     background-color: bisque;
 }
 
+
+
 body {
-    background-image:
-    linear-gradient(45deg, #808080 25%, transparent 25%), 
-    linear-gradient(-45deg, #808080 25%, transparent 25%),
-    linear-gradient(45deg, transparent 75%, #808080 75%),
-    linear-gradient(-45deg, transparent 75%, #808080 75%);
+  background-image: /* tint image */
+                    linear-gradient(to right, rgba(192, 192, 192, 0.75), rgba(192, 192, 192, 0.75)),
+                    /* checkered effect */
+                    linear-gradient(to right, black 50%, white 50%),
+                    linear-gradient(to bottom, black 50%, white 50%);
+  background-blend-mode: normal, difference, normal;
+  background-size: 2em 2em;
+}
+
+html{
   
-    background-size:20px 20px;    
-    background-position:0 0, 10px 0, 10px -10px, 0px 10px;
-  }
+}
